build: setup react

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo ipsam
-      inventore ad cupiditate dolorum, voluptatibus a et iusto rem voluptas in
-      iste quis, totam architecto aspernatur molestiae sapiente maxime
-      explicabo!
-    </p>
+    <div id="root"></div>
   </body>
 </html>
